# cpp-algorand-sdk-cmake

./: .gitignore  CMakeLists.txt
include/: algorand.h
